kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  hostnames:
    - flux.${DOMAIN_NAME}
  parentRefs:
    - name: internal
      namespace: envoy-system
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
